@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.maximinimalism" version="1.0.2" name="Maximinimalism" provider-name="theDeadman">
+<addon id="skin.maximinimalism" version="1.0.3" name="Maximinimalism" provider-name="theDeadman">
 	<requires>
 		<import addon="xbmc.gui" version="5.0.1"/>
 		<import addon="service.skin.widgets" version="0.0.25"/>
